| Summary: | ASTERISK-30217: Registration do not allow multiple proxies | ||
| Reporter: | Igor Goncharovsky (igorg) | Labels: | patch |
| Date Opened: | 2022-09-09 04:35:53 | Date Closed: | 2022-10-31 08:41:00 |
| Priority: | Major | Regression? | No |
| Status: | Closed/Complete | Components: | Resources/res_pjsip_outbound_registration |
| Versions: | 16.27.0 18.13.0 19.6.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) asterisk_pjsip_proxy.v1.diff | |
| Description: | chan_pjsip make you able to specify proxy chain for the endpoints in the format supported by pjsip:
outbound_proxy=<sip:192.168.2.7:7000\;lr>,<sip:172.12.27.1:5060\;lr> But when outbound_proxy specified for the registration, this wouldn't work because of pjsip_parse_uri would not able to pare such value giving following error: res_pjsip_outbound_registration.c: Invalid outbound proxy URI '<sip:192.168.2.7:7000;lr>,<sip:172.12.27.1:5060;lr>' specified on outbound registration 'VATS' With a simple pathch that remove uri parsing test on cofiguration load REGISTER to the proxy sent fine. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2022-09-09 04:35:57.205-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: George Joseph (gjoseph) 2022-09-09 05:25:14.275-0500 Igor are you going to submit this to Gerrit yourself? By: Igor Goncharovsky (igorg) 2022-09-09 05:39:00.062-0500 I do not know if it is fine to remove URI verification at this point. If Gerrit is the right place to continue discussion - sure, I'll upload it. By: Joshua C. Colp (jcolp) 2022-09-09 07:12:35.780-0500 Gerrit is the place to discuss such things if a patch is available. By: Friendly Automation (friendly-automation) 2022-10-31 08:41:02.613-0500 Change 19202 merged by Friendly Automation: res_pjsip_outbound_registration: Allow to use multiple proxies for registration [https://gerrit.asterisk.org/c/asterisk/+/19202|https://gerrit.asterisk.org/c/asterisk/+/19202] By: Friendly Automation (friendly-automation) 2022-10-31 08:52:40.898-0500 Change 19507 merged by Friendly Automation: res_pjsip_outbound_registration: Allow to use multiple proxies for registration [https://gerrit.asterisk.org/c/asterisk/+/19507|https://gerrit.asterisk.org/c/asterisk/+/19507] By: Friendly Automation (friendly-automation) 2022-10-31 08:57:48.063-0500 Change 19505 merged by George Joseph: res_pjsip_outbound_registration: Allow to use multiple proxies for registration [https://gerrit.asterisk.org/c/asterisk/+/19505|https://gerrit.asterisk.org/c/asterisk/+/19505] By: Friendly Automation (friendly-automation) 2022-10-31 08:58:17.085-0500 Change 19506 merged by George Joseph: res_pjsip_outbound_registration: Allow to use multiple proxies for registration [https://gerrit.asterisk.org/c/asterisk/+/19506|https://gerrit.asterisk.org/c/asterisk/+/19506] By: Friendly Automation (friendly-automation) 2022-10-31 11:43:25.603-0500 Change 19504 merged by George Joseph: res_pjsip_outbound_registration: Allow to use multiple proxies for registration [https://gerrit.asterisk.org/c/asterisk/+/19504|https://gerrit.asterisk.org/c/asterisk/+/19504] | ||