res/res_pjsip_outbound_registration.c
@@ -1827,19 +1827,7 @@ static int sip_outbound_registration_regc_alloc(void *data)
 		return -1;
 	}
 
-	if (!ast_strlen_zero(registration->outbound_proxy)) {
-		pj_strdup2_with_null(pool, &tmp, registration->outbound_proxy);
-		uri = pjsip_parse_uri(pool, tmp.ptr, tmp.slen, 0);
-		if (!uri) {
-			ast_log(LOG_ERROR, "Invalid outbound proxy URI '%s' specified on outbound registration '%s'\n",
-				registration->outbound_proxy, ast_sorcery_object_get_id(registration));
-			pjsip_endpt_release_pool(ast_sip_get_pjsip_endpoint(), pool);
-			return -1;
-		}
-	}
-
 	pjsip_endpt_release_pool(ast_sip_get_pjsip_endpoint(), pool);
-
 
 	ast_assert(state->client_state->client == NULL);
 	if (pjsip_regc_create(ast_sip_get_pjsip_endpoint(), state->client_state,
